--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -4,16 +4,16 @@
       atomic,
       begin, bool, break, by,
       class, cobegin, coforall, compilerError, compilerWarning, complex, config, const, continue,
-      def, distributed, do, domain,
+      def, delete, distributed, do, domain,
       else, enum,
       false, for, forall,
       goto,
       if, imag, in, index, int, inout,
-      label, let, locale,
+      label, let, local, locale,
       module,
       new, nil,
       on, opaque, otherwise, out,
-      param, pragma,
+      param,
       range, real, record, reduce, return,
       scan, select, serial, single, sparse, string, subdomain, sync,
       then, true, tuple, type,
