Changing cx1 to cx1-linux
To be more specific (and support the ability to have cx1-windows
in the future), renamed the cx1 platform to cx1-linux.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@15001 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/README
+++ b/README
@@ -74,8 +74,9 @@ For more detailed information about...      refer to...
   ...how Chapel tasks are mapped to threads  ...doc/README.threads
   ...example Chapel programs                 ...examples/README
   ...reporting bugs                          ...doc/README.bugs
-  ...notes for Cygwin users                  ...doc/README.cygwin
+  ...notes for Cray CX1 (Linux) users        ...doc/README.cx1-linux
   ...notes for Cray XT (CLE) users           ...doc/README.xt-cle
+  ...notes for Cygwin users                  ...doc/README.cygwin
   ...implementation status                   ...STATUS
   ...changes since the last release          ...CHANGES
   ...an overview of the Chapel language      ...doc/chapelLanguageSpec.pdf, Ch5
