updated spec with a few more John Lewis suggestions
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@15002 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Domains_and_Arrays.tex
+++ b/spec/Domains_and_Arrays.tex
@@ -588,8 +588,8 @@ are the first column of \chpl{A}.
 Array slices may also be expressed using partially unbounded or
 completely unbounded ranges.  This is equivalent to slicing the
 array's defining domain by the specified ranges to create a subdomain
-as described in Section~\ref{Arithmetic_Domain_Slicing} and then using
-that subdomain to slice the array.
+as described in~\rsec{Arithmetic_Domain_Slicing} and then using that
+subdomain to slice the array.
 
 \subsubsection{Formal Arguments of Arithmetic Array Type}
 \label{Formal_Arguments_of_Arithmetic_Array_Type}
