Added a few spec TODO items based on my CHANGES file work
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@15008 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/TODO
+++ b/spec/TODO
@@ -1,3 +1,9 @@
+TODOs while updating the CHANGES file
+-------------------------------------
+* document the Containers module
+* document that by operators can be overloaded
+-------------------------------------
+
 * Make supported parameter and type queries for ranges, domains, and
   arrays more explicit in the spec.  Most users are only realizing
   that this is possible by reading example codes.  Maybe include as
