Moved a copy of the 2008 benchmarks into the release examples directory
And updated the READMEs and Makefiles



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@15034 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -38,6 +38,7 @@ benchmarks:
      stream.chpl            : the STREAM Triad benchmark
      ra.chpl                : the global Random Access benchmark
      fft.chpl               : the global 1D FFT benchmark
+     hpl.chpl               : the High Performance Linpack benchmark
 
 
 ------------------
@@ -83,3 +84,4 @@ Other files
   *.notest        : "
   *.numlocales    : "
   *.perfkeys      : "
+  *.timeout       : "
