added parallel iterator notes and updated spec version to 0.780
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@15046 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Iterators.tex
+++ b/spec/Iterators.tex
@@ -5,6 +5,11 @@
 An iterator is a function that conceptually returns multiple values
 rather than simply a single value.
 
+\begin{openissue}
+The parallel iterator story is under development.  It is expected that
+the specification will be expanded regarding parallel iterators soon.
+\end{openissue}
+
 \subsection{Iterator Functions}
 \label{Iterator_Functions}
 
