--- a/spec/Parallelism_and_Synchronization.tex
+++ b/spec/Parallelism_and_Synchronization.tex
@@ -93,8 +93,8 @@ begin-statements: break-statements, continue-statements,
 yield-statements, and return-statements.
 \begin{openissue}
 It is undecided whether yield-statement should be allowed inside the
-following parallel statements (begin, cobegin, coforall, and forall).
-The design of parallel iterators is currently ongoing.  If simple
+following parallel statements: cobegin, coforall, and forall.  The
+design of parallel iterators is currently ongoing.  If simple
 iterators with yield-statements in parallel statements are allowed,
 there would be an issue on how such iterators could be zippered.  This
 issue is a high priority and there are a number of ideas on the table.
